[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/FadeScreen.png" type="Texture" id=1]
[ext_resource path="res://IntroFade.gd" type="Script" id=2]
[ext_resource path="res://assets/screens/1.jpg" type="Texture" id=3]

[node name="IntroFade" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 456, 256 )
z_index = -1
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 288 )
texture = ExtResource( 3 )

[node name="FadeScreen" type="Sprite" parent="CanvasLayer"]
position = Vector2( 456, 256 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="CanvasLayer"]

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_all_completed" from="CanvasLayer/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
